Fix z-index for all elements

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -34,6 +34,5 @@
 				transparent 100%
 			);
 		background-size: 2.5rem 2.5rem;
-		z-index: 50;
 	}
 }
